# vision

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .markdownlint.yml  .markdownlintignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  THIRD_PARTY.md  build_backend.py  conftest.py  gate_summary.txt  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  roadmap.lock.json  roadmap.yaml  ruff.toml  seeds.env  setup.cfg  vision.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-matrix.yml  ci.yml  ci_probe.yml  docs-gate.yml  (+15 more)
artifacts/: ledger_tip.txt  licenses.json  manifest.json  manifest.json.sig  metrics_hash.txt  metrics_hash_payload.json  metrics_run2.json  metrics_summary.json  promotion_report.json  promotion_report.jsonl  purity_report.json  sbom.json  seeds_applied.json  sot_summary.json  sot_summary.json.sig  stage_ledger.jsonl  wheels_hashes.txt
bench/: e2e_samples.jsonl  oracle_e2e.json  oracle_stats.json
docs/: BLOCKED.S1.md  BLOCKED.S2.md  Vision_v1_Investor_SoT.html  architecture.md  benchmarks.md  charter.md  eval.md  latency.md  releasing.md  schema-guide.md  schema.md  vision_v1_single_source_of_truth.md
logs/: evidence_ledger.jsonl
schemas/: evidence_ledger.schema.jsonl  metrics.schema.json  metrics_manifest.schema.json  oracle_e2e.schema.json  oracle_stats.schema.json  purity_report.schema.json
scripts/: audit_syscalls.sh  bench_calibration.py  bench_labelbank.py  bench_oracle.py  bench_oracle_e2e.py  build_fixture.py  build_labelbank_shard.py  build_oracle_fixture.py  canonicalize_pdf.py  capture_env.py  check_bench_deps.py  check_links.py  check_metrics_schema.py  check_no_runtime_ris.sh  check_public_api.py  check_roadmap.py  check_schema_bump.py  check_schema_sync.py  check_slo.py  collect_metrics.py  fileset.py  gallery_dedupe_audit.py  gen_roadmap_lock.py  kb_promote.py  ledger_tip.py  make_sot_pdf.py  plot_latency.py  preflight_tripwire.py  print_summary.py  public_api_golden.txt  purity_guard.sh  repro_check.py  run_sandboxed.py  sign_json.py  smoke_readme.py  step_summary.py  supplychain.py  sync_sot_acceptance.py  unknowns_guard.py  validate_manifest.py  (+5 more)
tests/: test_calibration_determinism.py  test_calibration_math.py  test_cli.py  test_cli_outputs.py  test_cluster_store.py  test_cold_start_startpoint.py  test_config.py  test_deprecation.py  test_detect_track_adapters.py  test_embedder.py  test_embedder_adapter.py  test_embedding_projection.py  test_eval_calibration.py  test_eval_cli.py  test_eval_reporting.py  test_evaluator.py  test_fake_detector.py  test_hello_cli.py  test_index_incremental.py  test_index_utils.py  test_kb_promotion.py  test_labelbank_hnsw.py  test_labelbank_wiring.py  test_labeler.py  test_latency_controller.py  test_match_unknown_policy.py  test_matcher.py  test_matcher_factory.py  test_matcher_faiss_parity.py  test_matcher_numpy_backend.py  test_oracle_abstain.py  test_oracle_queue.py  test_oracle_verify_wiring.py  test_phash.py  test_pipeline_and_factory.py  test_pipeline_backend_introspection.py  test_pipeline_detect_track_embed.py  test_pipeline_match_schema.py  test_plot_latency.py  test_provenance.py  (+13 more)
(+118 files in other folders)
