[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vision"
version = "0.1.1"
description = "Minimal vision pipeline stubs with CLI (M0)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "The Vision Authors", email = "dev@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
opencv = ["opencv-python"]

[project.urls]
Homepage = "https://github.com/matthewtpapa/vision"
Repository = "https://github.com/matthewtpapa/vision"
Issues = "https://github.com/matthewtpapa/vision/issues"

[project.scripts]
vision = "vision.cli:main"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]
